# Tutorials:
add_executable(mosfet               mosfet.cpp)
add_executable(mosfet_3d            mosfet_3d.cpp)
add_executable(nin_1d               nin_1d.cpp)
add_executable(nin_2d_laplace       nin_2d_laplace.cpp)
add_executable(poisson_1d           poisson_1d.cpp)
add_executable(poisson_2d           poisson_2d.cpp)
add_executable(poisson_3d           poisson_3d.cpp)


